Step3 사다리(게임 실행) - pangnem (#1434)