@@ -1,7 +1,11 @@
 package nextstep.ladder.domain;
 
-import nextstep.ladder.domain.exceptions.NotAllowNegativeOrZero;
-import nextstep.ladder.domain.exceptions.NotNumberStringIsNotAllowException;
+import nextstep.ladder.exceptions.NotAllowNegativeOrZero;
+import nextstep.ladder.exceptions.NotNumberStringIsNotAllowException;
+import nextstep.ladder.domain.line.Line;
+import nextstep.ladder.domain.line.LineTest;
+import nextstep.ladder.domain.line.LinesTest;
+import nextstep.ladder.domain.member.MembersTest;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -9,7 +13,6 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.NullAndEmptySource;
 import org.junit.jupiter.params.provider.ValueSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -71,12 +74,10 @@ class MaxHeightOfLadderTest {
 
     @Nested
     class getLines_메서드는 {
-        private Members members;
         private MaxHeightOfLadder maxHeightOfLadder;
 
         @BeforeEach
         void setUp() {
-            this.members = Members.of(Arrays.asList("pobi", "jason", "pang", "nem"));
             this.maxHeightOfLadder = new MaxHeightOfLadder(4);
         }
 
@@ -85,11 +86,10 @@ class MaxHeightOfLadderTest {
 
             @Test
             void lines_검증() {
-                List<Boolean> booleans = Arrays.asList(true, false, true);
-                List<List<Boolean>> lists = Arrays.asList(booleans, booleans, booleans, booleans);
+                Line line = LineTest.create(List.of(true, false, true));
 
-                assertThat(maxHeightOfLadder.getLines(members, () -> true))
-                        .isEqualTo(Lines.of(lists));
+                assertThat(maxHeightOfLadder.getLines(MembersTest.members, () -> true))
+                        .isEqualTo(LinesTest.create(List.of(line, line, line, line)));
             }
         }
 
@@ -98,11 +98,10 @@ class MaxHeightOfLadderTest {
 
             @Test
             void lines_검증() {
-                List<Boolean> booleans = Arrays.asList(false, false, false);
-                List<List<Boolean>> lists = Arrays.asList(booleans, booleans, booleans, booleans);
+                Line line = LineTest.create(List.of(false, false, false));
 
-                assertThat(maxHeightOfLadder.getLines(members, () -> false))
-                        .isEqualTo(Lines.of(lists));
+                assertThat(maxHeightOfLadder.getLines(MembersTest.members, () -> false))
+                        .isEqualTo(LinesTest.create(List.of(line, line, line, line)));
             }
         }
 
